Fri Sep  5 18:16:31 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (iconv_create): strips glibc style option before
	  charset mapping.  retris without options if they seemed causing
	  error, and warns.  [ruby-dev:36147]

Fri Sep  5 03:09:48 2008  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_data_to_ary): make it static.

	* thread.c (thgroup_enclose): ditto.

Fri Sep  5 02:56:37 2008  Koichi Sasada  <ko1@atdot.net>

	* vm.c (thread_recycle_stack_slot, thread_recycle_stack_count): 
	  make it static.

Fri Sep  5 02:40:38 2008  Koichi Sasada  <ko1@atdot.net>

	* thread.c (rb_thread_critical): removed.

Fri Sep  5 01:22:23 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (argf_mark): mark p->encs.ecopts.

Fri Sep  5 00:45:07 2008  Tanaka Akira  <akr@fsij.org>

	* transcode_data.h (rb_transcoder): rename fields:
	  from_encoding -> src_encoding, to_encoding -> dst_encoding.

	* transcode.c: follow the renaming.

Fri Sep  5 00:22:34 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c: variables renamed for consistency.

Fri Sep  5 00:05:27 2008  Tanaka Akira  <akr@fsij.org>

	* pack.c (encodes): make buff fixed length to avoid SEGV by
	  ruby -e '["a"*10000000].pack("m1000000000")'

Thu Sep  4 23:47:05 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_mode): set exception mode
	  correctly.  In spite of BigDecimal.mode(BigDecimal::EXCEPTION_ALL,
	  true), BigDecimal.new("NaN") did not raise an exception previously.

Thu Sep  4 23:42:42 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_file_open_str): declared.

	* io.c (rb_file_open_str): defined.

	* ext/zlib/zlib.c (gzfile_s_open): use rb_file_open_str instead of
	  rb_file_open.

Thu Sep  4 23:18:55 2008  Tanaka Akira  <akr@fsij.org>

	* enc/trans/newline.trans: record newline types met in universal
	  newline decoder.

Thu Sep  4 23:05:54 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
